--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "form-data": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
