--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,11 @@ NODE_ENV=production
 
 # Unstructured API Configuration
 UNSTRUCTURED_API_URL=https://api.unstructured.io/general/v0/general
-UNSTRUCTURED_API_KEY=your-api-key-here
+UNSTRUCTURED_API_KEY=IeeVUKmWhvILCTWwjROBpSFxx5I0Do
+
+# Cloudflare R2 Configuration
+R2_ACCESS_KEY_ID=your-access-key-id
+R2_SECRET_ACCESS_KEY=your-secret-access-key
+R2_ENDPOINT=your-r2-endpoint
+R2_BUCKET=file-json-converter
+R2_PUBLIC_URL=your-cdn-url
